# Momentum

./: .gitignore  README.md
ArchLinux/: README.md  main.tex
ArchLinux/tty/: main.tex
Vulkan/triangle/: main.tex
cpp/: README.md
cpp/basic/: README.md
cpp/basic/language/keyword/define/: README.md  define-1.cpp  define-2.cpp  define-3.cpp  define-4.cpp  define-5.cpp  define-6.cpp  define-7.cpp  define-8.cpp  define-9.cpp
learn-cmake/: README.md
learn-cmake/cmake-3.26.3-tutorial-source/: README.md
learn-cmake/cmake-3.26.3-tutorial-source/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step10/: CMakeLists.txt  tutorial.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step10/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  MathFunctions.h  mysqrt.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step11/: CMakeLists.txt  Config.cmake.in
learn-cmake/cmake-3.26.3-tutorial-source/Step11/MathFunctions/: CMakeLists.txt
learn-cmake/cmake-3.26.3-tutorial-source/Step12/: CMakeLists.txt  MultiCPackConfig.cmake
learn-cmake/cmake-3.26.3-tutorial-source/Step12/MathFunctions/: CMakeLists.txt
learn-cmake/cmake-3.26.3-tutorial-source/Step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step2/MathFunctions/: CMakeLists.txt  mysqrt.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step3/: CMakeLists.txt  tutorial.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step3/MathFunctions/: CMakeLists.txt
learn-cmake/cmake-3.26.3-tutorial-source/Step4/: CMakeLists.txt  tutorial.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step4/MathFunctions/: CMakeLists.txt  mysqrt.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step5/: CMakeLists.txt
learn-cmake/cmake-3.26.3-tutorial-source/Step5/MathFunctions/: CMakeLists.txt
learn-cmake/cmake-3.26.3-tutorial-source/Step6/: CMakeLists.txt  tutorial.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step6/MathFunctions/: CMakeLists.txt  mysqrt.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step7/: CMakeLists.txt
learn-cmake/cmake-3.26.3-tutorial-source/Step7/MathFunctions/: CMakeLists.txt  mysqrt.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step8/: CMakeLists.txt  tutorial.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step8/MathFunctions/: CMakeLists.txt  MakeTable.cxx  mysqrt.cxx
learn-cmake/cmake-3.26.3-tutorial-source/Step9/: CMakeLists.txt
learn-cmake/practice/variables-in-cmake/: CMakeLists.txt  README.md  main.cpp
learn-cmake/practice/variables-in-cmake/hello/: CMakeLists.txt  hello.cpp  hello.h
learn-git/notes/: main.aux  main.out  main.tex  main.toc
